--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ django-jazzmin==2.6.0
 gunicorn==20.1.0
 idna==3.4
 psycopg2-binary==2.9.5
+python-decouple==3.8
+python-http-client==3.3.7
 requests==2.28.2
+sendgrid==6.9.7
 sqlparse==0.4.3
+starkbank-ecdsa==2.2.0
 tzdata==2022.7
 urllib3==1.26.14
